# PlantGPT

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml  build.gradle
android/src/com/plantGPT/: GalleryHelper.java  RequestReadExternalStorage.java
asserts/light/: temperaturepng
core/qtmqtt/: .cmake.conf  .tag  dependencies.yaml
core/qtmqtt/src/mqtt/: qmqttclient.cpp  qmqttclient.h  qmqttconnection.cpp  qmqttconnection_p.h
core/qtmqtt/tests/auto/qmqttsubscription/: tst_qmqttsubscription.cpp
core/sources/: androidsystem.cpp  androidsystem.h  modelrunner.cpp  modelrunner.h  myhelper.cpp  myhelper.h
ux/Pages/: CameraPage.qml  HomePage.qml  InfarenceHistoryPage.qml  InfarenceResultPage.qml  SensorPage.qml
ux/Screens/: CameraScreen.qml  HomeScreen.qml
ux/delegates/: HistoryDelegate.qml
ux/home/: MainStackView.qml
ux/models/: HistoryModel.qml
ux/utils/: AvataDrawerTools.qml  DHTMeter.qml  Header.qml  ImagePreview.qml  Utils.js
